[project]
name = "invest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lmkirvan", email = "kirvan.lewis@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.20.0",
]

[project.scripts]
invest = "invest:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
